plugins {
    id 'java'
}

group 'ru.hw'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    compile group: 'com.google.guava', name: 'guava', version: '28.2-jre'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
    compile group: 'org.jooq', name: 'joou', version: '0.9.4'

    testCompileOnly 'org.projectlombok:lombok:1.18.12'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.2'
    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}

task(benchmark, dependsOn: 'classes', type: JavaExec) {
    main = 'ru.hw.md5.benchmark.Benchmark'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs += ['-verbose:gc', '-XX:+TieredCompilation', '-Xms3096m']
//    args 'mrhaki'
//    systemProperty 'simple.message', 'Hello '
}